# CodeTrackr

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml  leapcell.yaml
migrations/: 0001_initial.sql  0002_plugin_store.sql  0003_plugin_store_v2.sql  0004_stripe.sql  0005_add_anonymous_fields.sql  0005_plugin_script.sql  0006_plugin_accepted_version.sql  0006_refresh_tokens.sql  0007_plugin_reviews.sql  0008_profiles.sql  0009_plugin_endpoints.sql  0010_user_dashboard_order.sql  0011_plugin_dependencies.sql  0012_available_for_hire.sql  0012_plugin_external_access.sql  0013_hire_contacts.sql  0013_plugin_permissions.sql  0014_themes.sql  0015_anonymous_auth.sql  0015_refresh_token_rotation.sql  0016_enhance_anonymous_privacy.sql  0017_refresh_tokens_fix.sql  0019_fix_heatmap_theme.sql  0020_leaderboard_visibility.sql  0021_plugin_type.sql  0022_fix_missing_columns.sql  9999_publish_existing.sql
src/: db.rs  error_handling.rs  main.rs  models.rs  realtime.rs
src/api/: auth.rs  badge.rs  billing.rs  cteditor.rs  dashboard.rs  export.rs  frontend.rs  health.rs  heartbeats.rs  import.rs  keys.rs  leaderboards.rs  mod.rs  plugin_rpc.rs  stats.rs  store.rs  themes.rs  users.rs
src/api/plugin_rpc/: mod.rs  sandbox.rs  sql_validator.rs
src/auth/: anonymous.rs  github.rs  gitlab.rs  mod.rs
src/middleware/: csp.rs
src/services/: mod.rs  plugin_permissions.rs  plugin_workers.rs  plugins.rs  refresh_tokens.rs
static/: cteditor.html  docs.html  index.html  plugin_store.html
static/css/: main.css
static/js/: README.md  app.js
static/js/modules/: api.js  (+16 more)
(+1 files in other folders)
