[package]
name = "codetrackr"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[[bin]]
name = "codetrackr"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "compression-gzip"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "tokio-rustls-comp", "connection-manager", "aio"] }

# Auth
jsonwebtoken = "9"
oauth2 = "4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
hmac = "0.12"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Crypto
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
futures = "0.3"
async-trait = "0.1"
rquickjs = { version = "0.9", features = ["full"] }
base64 = "0.21"
tower_governor = { version = "0.4", features = ["axum"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
regex = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
